--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "body-parser": "^1.20.2",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.0",
+    "express-validator": "^7.1.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
